Fixed text alignment.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -109,17 +109,20 @@
   width: 100%;
   max-width: 400px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .notifyText {
   font-weight: 500;
   margin-bottom: 1rem;
   font-size: var(--font-size-medium);
+  text-align: center;
 }
 
 .notifyForm {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .emailInput {
@@ -128,6 +131,8 @@
   border: none;
   border-radius: 4px;
   font-size: var(--font-size-medium);
+  width: 100%;
+  color: black;
 }
 
 .notifyButton {
@@ -139,6 +144,7 @@
   border-radius: 4px;
   font-size: var(--font-size-medium);
   transition: background-color 0.3s;
+  width: 100%;
 }
 
 .notifyButton:hover {
@@ -148,6 +154,7 @@
 .successMessage, .errorMessage {
   margin-top: 1rem;
   font-size: var(--font-size-small);
+  text-align: center;
 }
 
 .successMessage {
